--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/sara.sherif.daoud.saad2133/viz/SalesDashboard_16765680522160/SalesDashboard?publish=yes" class="image fit"><img src="images/Tableau Sales .png" alt="" /></a>
-									<p> The analysis focuses on analyzing sales, profits, and quantities sold and comparing this year's KPIs with the previous ones across different states. The analysis also identifies highly competitive salesmen and how much they contributed to the total profits and sales while determining peak sales and profit points.</p>
+									<p> This project aims to develop a detailed and interactive Sales Dashboard that provides comprehensive insights into sales performance, profit, and quantity metrics across different dimensions such as state, segment, and location. The project focuses on analyzing sales, profits, and quantities sold, and comparing this year's KPIs with the previous year's across different states. It also identifies highly competitive salespeople and their contributions to total profits and sales, while determining peak sales and profit points. Key features include displaying total sales, profit, and quantity sold with year-over-year changes, visualizing sales and profit distribution by state, showing monthly sales by segment, and providing a detailed breakdown of sales and profit by segment. Additionally, the dashboard highlights the top 10 states by sales and profit, enabling quick identification of high-performing and underperforming regions.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/sara.sherif.daoud.saad2133/viz/SalesDashboard_16765680522160/SalesDashboard?publish=yes" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/saracherif123/Healthcare-Dashboard">Healthcare Dashboard using PowerBI<br />
+										<h2><a href="https://github.com/saracherif123/Healthcare-Dashboard">Healthcare Dashboard using Power BI<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/saracherif123/Healthcare-Dashboard" class="image fit"><img src="images/Healthcare Main.png" alt="" /></a>
-									<p>Analyze healthcare data to get insights on wait lists and their specialities.</p>
+									<p>This project aims to develop a comprehensive and interactive Healthcare Dashboard that provides key insights into patient wait lists, case types, and specialty wait times. The dashboard is designed to assist healthcare administrators and practitioners in efficiently managing and analyzing patient flow and service demand.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/saracherif123/Healthcare-Dashboard" class="button">View Project</a></li>
 									</ul>
