--- a/index.html
+++ b/index.html
@@ -70,12 +70,7 @@
 					</nav>
 
 				<!-- Main -->
-					<div id="main">
-
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h2><a href="#">Publication<br />
+					<div id="main"> Optimization of the early pruning algorithm "DS-Prox" using Spark <br />
 									</a></h3>
 									<h3><a href="#">Optimizing File Similarity Search Techniques in Data Lakes using Parallel Processing and Big Data Frameworks<br />
 									</a></h3>
