--- a/index.html
+++ b/index.html
@@ -70,13 +70,18 @@
 					</nav>
 
 				<!-- Main -->
-					<div id="main"> Optimization of "DS-Prox" using Spark <br />
+				<div id="main">
+
+						<!-- Featured Post -->
+							<article class="post featured">
+								<header class="major">
+									<h2><a href="https://ieeexplore.ieee.org/document/10526156"> Optimization of Early Pruning Algorithm "DS-Prox" using Spark<br />
 									</a></h3>
-									<h3><a href="#">Optimizing File Similarity Search Techniques in Data Lakes using Parallel Processing and Big Data Frameworks<br />
+									<h3><a href="https://ieeexplore.ieee.org/document/10526156">Optimizing File Similarity Search Techniques in Data Lakes using Parallel Processing and Big Data Frameworks<br />
 									</a></h3>
 									<p>Smart cities generate a massive amount of disparate data from multiple sources, necessitating the use of Data Lakes for efficient storage and management, especially with the advent of Big Data. However, it is critical to use appropriate search techniques and governance to prevent the Data Lake from becoming a data swamp. The Data Lake encompasses a wide range of documents and topics, which makes finding similar datasets, e.g., through schema matching approaches, difficult and computationally intensive. In this paper, we propose an approach that leverages Data Lakes and Big Data frameworks to improve the search for related or near-identical structured textual datasets. We present a framework for re-implementing the early pruning algorithm "DS-Prox" within a Big Data framework using Spark. The framework involves prototyping with two machine learning models: a Multilayer Perceptron neural network and a Random Forest ensemble learner. The effectiveness of our approach is demonstrated with good accuracy levels, highlighting the benefits of managing heterogeneous Big Data in Data Lakes.</p>
 								</header>
-								<a href="" class="image main"><img src="images/Architechture .png" alt="" /></a>
+								<a href="" class="image main"><img src="images/Architecture .png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://ieeexplore.ieee.org/document/10526156" class="button large">View Project</a></li>
 								</ul>
