--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(+20) 1112602617></p>
+								<p>(+20) 1112602617</p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">saracherifsaad@gmail.com</a></p>
+								<p>saracherifsaad@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
