Little fix to show image

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<header>
 										<h2><a href="https://github.com/saracherif123/Neo4j-Research-Publications-Graph-Database">Research Publications Graph Database</a></h2>
 									</header>
-									<a href="https://github.com/saracherif123/Neo4j-Research-Publications-Graph-Database" class="image fit"><img src="images/neo4j.png" alt="Neo4j Research Publications Graph Database - Entity Relationship Visualization" /></a>
+									<a href="https://github.com/saracherif123/Neo4j-Research-Publications-Graph-Database" class="image fit"><img src="images/Neo4j.png" alt="Neo4j Research Publications Graph Database - Entity Relationship Visualization" /></a>
 									<p>Designed and implemented a graph database system using Neo4j to manage and analyze research publications. Features include advanced analytics, co-authorship and citation networks, and review-based decision modeling. Developed for the Semantic Data Management course at UPC, this project demonstrates expertise in graph data modeling and complex query design.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/saracherif123/Neo4j-Research-Publications-Graph-Database" class="button">View Project</a></li>
